Fixing various compiler warnings